...
  'bird': 'Kuş',
  'heart': 'Kalp',
  'fish': 'Balık',
  'snake': 'Yılan',
  'dog': 'Köpek',
  'butterfly': 'Kelebek',
  'tree': 'Ağaç',
  'horse': 'At',
  'eye': 'Göz',
  'crown': 'Taç',
  'ring': 'Yüzük',
  'road': 'Yol',
  'mountain': 'Dağ',
...
